student-attendance-microservices/k8s/networkpolicies/management-backend-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: student-management-service-allow
spec:
  podSelector:
    matchLabels:
      app: student-management-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: management-frontend   # allow only frontend pods
    - namespaceSelector: {}          # allow ingress controller
    ports:
    - protocol: TCP
      port: 3001
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql   # allow DB only
    ports:
    - protocol: TCP
      port: 3306
