student-attendance-microservices/k8s/networkpolicies/management-frontend-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: management-frontend-allow
spec:
  podSelector:
    matchLabels:
      app: management-frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
